# archimedes

./: .gitignore  Cargo.toml  README.md  prompt.md  state-archimedes-task.md
crates/availability/: Cargo.toml
crates/availability/src/: erasure.rs  lib.rs  sampling.rs  storage.rs
crates/core/: Cargo.toml
crates/core/benches/: commitment_bench.rs
crates/core/src/: aggregation.rs  commitment.rs  errors.rs  lib.rs
crates/dispute/: Cargo.toml
crates/dispute/src/: bisection.rs  lib.rs  resolution.rs
crates/incentive/: Cargo.toml
crates/incentive/src/: bond.rs  lib.rs  reward.rs  stake.rs
crates/proof/: Cargo.toml
crates/proof/src/: circuit.rs  lib.rs  transcript.rs  witness.rs
crates/state/: Cargo.toml
crates/state/src/: encoding.rs  lib.rs  merkle.rs
