[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/state",
    "crates/dispute",
    "crates/incentive",
    "crates/availability",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Archimedes Contributors"]
license = "MIT"
repository = "https://github.com/wienerlabs/archimedes"

[workspace.dependencies]
# Arkworks cryptographic primitives
ark-ff = "0.5"
ark-ec = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-bls12-381 = "0.5"
ark-ed-on-bls12-381 = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["commitment", "crh", "merkle_tree"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
blake2 = "0.10"
sha2 = "0.10"

# Error handling
thiserror = "2.0"

# Testing
rand = "0.8"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"

[profile.bench]
opt-level = 3
lto = "thin"

