[package]
name = "archimedes-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core cryptographic primitives for Archimedes incremental homomorphic commitments"

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-bls12-381.workspace = true
ark-ed-on-bls12-381.workspace = true
ark-crypto-primitives.workspace = true
serde.workspace = true
thiserror.workspace = true
blake2.workspace = true

[dev-dependencies]
rand.workspace = true
hex.workspace = true

