[package]
name = "archimedes-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
archimedes-core = { path = "../core" }
archimedes-state = { path = "../state" }
ark-ff = "0.5"
ark-ec = "0.5"
ark-bls12-381 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
sha2 = "0.10"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

